objects/DandB_OtherPublicRecord__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_OtherPublicRecord</relationshipLabel>
        <relationshipName>DandB_OtherPublicRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionTypeCode__c</fullName>
        <label>actionTypeCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionTypeDesc__c</fullName>
        <label>actionTypeDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>court__c</fullName>
        <label>court</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditor__c</fullName>
        <label>creditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodgedDay__c</fullName>
        <label>lodgedDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodgedMonth__c</fullName>
        <label>lodgedMonth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodgedYear__c</fullName>
        <label>lodgedYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paidDay__c</fullName>
        <label>paidDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paidMonth__c</fullName>
        <label>paidMonth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paidYear__c</fullName>
        <label>paidYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plaintiffName__c</fullName>
        <label>plaintiffName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plaintiffNumber__c</fullName>
        <label>plaintiffNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DandB_OtherPublicRecord</label>
    <nameField>
        <label>DandB_OtherPublicRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_OtherPublicRecord</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>